--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         	Ceci est un <strong>paragraphe</strong>. Avez-vous bien compris ?
         </p>
         <a href="https://instagram.com/loxus_kingstar" target="blank">
-        	Cliquez ici pour vous rendre sur mon autre page
+        	C'est un lien ce truc, tu as compris ? 
         </a>
     </body>
 </html>
