--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
         <a href="https://instagram.com/loxus_kingstar" target="blank">
         	C'est un lien ce truc, tu as compris ? 
         </a>
+        <center> 
+        	<img src="img/ha4or.jpg" alt="hacker">
+        </center>
     </body>
 </html>
